fix: change pause button size on mobile

--- a/src/assets/scss/common/_player.scss
+++ b/src/assets/scss/common/_player.scss
@@ -420,9 +420,12 @@
     width: 30px;
     height: 30px;
     background-size: 100% 100%;
+    &:after {
+      width: 30px;
+      height: 30px;
+    }
   }
 
-  .player-icon,
   .slider-icon,
   .change-quote {
     width: 28px;
